# swig-eigen-example

./: CMakeLists.txt  README.md  foo.cpp
bindings/: CMakeLists.txt  Foo.i
bindings/python/: CMakeLists.txt  eigen.i  pycontainer.swg
include/: foo.h
